# soulbridgeai-unified

./: .dockerignore  .env.example  .env.monitoring  .gitignore  .pre-commit-config.yaml  .railwayignore  ARCHITECTURE_BLUEPRINT.md  AVATAR_SYSTEM_COMPLETE_ANALYSIS.md  CLAUDE.md  CLAUDE_README.md  DELETE_THESE_ollama_files.txt  DEPLOYMENT.md  DISCORD_SETUP.md  Dockerfile  Dockerfile.ollama  EMAIL_SETUP.md  GOOGLE_OAUTH_SETUP.md  INSTALL_OLLAMA.md  MINI_ASSISTANT_BUTTON.html  MONITORING_CHECKLIST.md  MUSIC_STUDIO_UPGRADE.md  PRODUCTION_ENHANCEMENTS.md  PROFILE_IMAGE_SYSTEM.md  Procfile  RAILWAY_POSTGRES_SETUP.md  RAILWAY_SESSION_SETUP.md  README.md  REFACTOR_LOG.md  SECURITY_IMPROVEMENTS.md  SETUP_BRONZE_SILVER_GOLD_STRIPE.md  SOUL_COMPANIONS_BLUEPRINT.md  STRIPE_LIVE_SETUP.md  TESTING_CHECKLIST.md  add_trial_columns.py  add_trial_columns_migration.sql  api-mapping.md  app.py  app.py.old.backup  auto_login.html  cleanup_models.py  (+52 more)
backend/: .coverage  .env.example  .env.template  .gitignore  =0.34.0  =3.0.0  API_DOCUMENTATION.md  AUTHENTICATION_COMPLETE.md  EXPORT_BACKUP_COMPLETE.md  FIREBASE_SETUP.md  MOOD_TRACKING_COMPLETE.md  PROJECT_FILE_LIST.md  README.md  SETUP_COMPLETE.md  SETUP_STRIPE.md  access.py  add_credits_production.py  add_credits_simple.py  add_credits_temp.py  add_missing_columns.sql  add_theme_column.py  add_trial_columns.py  admin_dashboard.py  admin_trial_reset.py  ai_content_filter.py  ai_insights.py  ai_model_manager.py  analytics.py  app.py  app.py.backup  app_core.py  app_fixed.py  app_fixed_backup.py  app_gradual.py  app_horoscope_backup.py  (+339 more)
(+670 files in other folders)
